--- a/index.html
+++ b/index.html
@@ -337,6 +337,15 @@
             </form>
         </div>
     </div>
+    <div id="modal-stats" class="fixed inset-0 bg-slate-900/60 backdrop-blur-sm z-[80] hidden flex items-center justify-center p-4 transition-all">
+        <div class="bg-white rounded-3xl w-full max-w-2xl p-8 shadow-2xl animate-fade-in max-h-[90vh] overflow-y-auto custom-scrollbar">
+            <div class="flex justify-between items-center mb-6">
+                <h3 class="text-2xl font-bold text-slate-800"><i class="fas fa-chart-pie mr-2 text-purple-500"></i> สถิติภาพรวม</h3>
+                <button onclick="closeModal('modal-stats')" class="text-slate-400 hover:text-slate-600"><i class="fas fa-times text-xl"></i></button>
+            </div>
+            <div id="stats-content" class="space-y-6"></div>
+        </div>
+    </div>
 
     <!-- MODAL: Edit Project -->
     <div id="modal-edit-project" class="fixed inset-0 bg-slate-900/60 backdrop-blur-sm z-[60] hidden flex items-center justify-center p-4 transition-all">
