--- a/index.html
+++ b/index.html
@@ -877,6 +877,7 @@
         });
 
         // --- 5. DETAIL ---
+                window.switchProjectView = (mode) => { state.projectView = mode; state.currentPage = 1; document.getElementById('btn-view-list').className = mode==='list'?"px-6 py-2 rounded-lg text-sm font-bold bg-white shadow-sm text-spt-primary transition-all border border-slate-100":"px-6 py-2 rounded-lg text-sm font-bold text-slate-500 hover:text-slate-700 hover:bg-slate-100/50 transition-all"; document.getElementById('btn-view-ranking').className = mode==='ranking'?"px-6 py-2 rounded-lg text-sm font-bold bg-white shadow-sm text-spt-primary transition-all border border-slate-100":"px-6 py-2 rounded-lg text-sm font-bold text-slate-500 hover:text-slate-700 hover:bg-slate-100/50 transition-all"; document.getElementById('edit-mode-container').classList.toggle('hidden', mode==='ranking'); if(mode==='ranking'){state.editMode=false;document.getElementById('edit-mode-toggle').checked=false;} calculateAndRender(); };
 window.openProjectDetail = async (id) => {
             document.getElementById('loading').classList.remove('hidden');
             const docSnap = await getDoc(doc(db, 'projects', id));
