--- a/index.html
+++ b/index.html
@@ -969,41 +969,7 @@ window.openProjectDetail = async (id) => {
             document.getElementById('loading').classList.add('hidden');
         }
 
-        function calculateAndRender() {
-            const proj = state.currentProject;
-            const filter = document.getElementById('search-box').value.toLowerCase();
-            
-            // 1. Calculate Score
-            state.studentsCache.forEach(s => {
-                let total = 0;
-                proj.subjects.forEach(sub => total += parseFloat(s.scores[sub.name] || 0));
-                s.total = parseFloat(total.toFixed(2));
-            });
-
-            // 2. Sort Logic (Total -> Priority)
-            const sortFn = (a, b) => {
-                if (b.total !== a.total) return b.total - a.total; 
-                const breakers = proj.subjects.filter(s => s.priority && s.priority > 0).sort((x,y) => x.priority - y.priority);
-                for (const sub of breakers) {
-                    const sA = parseFloat(a.scores[sub.name]||0);
-                    const sB = parseFloat(b.scores[sub.name]||0);
-                    if (sB !== sA) return sB - sA;
-                }
-                return 0;
-            };
-
-            // 3. Create a ranked list to determine ranks
-            const rankedList = [...state.studentsCache].sort(sortFn);
-            
-            // 4. Assign Rank (1224 Logic)
-            rankedList.forEach((s, index) => {
-                if (index > 0 && sortFn(rankedList[index - 1], s) === 0) {
-                    s.rank = rankedList[index - 1].rank;
-                } else {
-                    s.rank = index + 1;
-                }
-            });
-
+                function calculateAndRender(){ const p=state.currentProject; const f=document.getElementById('search-box').value.toLowerCase(); state.studentsCache.forEach(s=>{ let t=0; p.subjects.forEach(sub=>t+=parseFloat(s.scores[sub.name]||0)); s.total=parseFloat(t.toFixed(2)); }); const sFn=(a,b)=>{if(b.total!==a.total)return b.total-a.total;const br=p.subjects.filter(s=>s.priority).sort((x,y)=>x.priority-y.priority);for(const sb of br){const sa=parseFloat(a.scores[sb.name]||0);const sbv=parseFloat(b.scores[sb.name]||0);if(sbv!==sa)return sbv-sa;}return 0;}; const rList=[...state.studentsCache].sort(sFn); rList.forEach((s,i)=>{if(i>0&&sFn(rList[i-1],s)===0)s.rank=rList[i-1].rank;else s.rank=i+1;}); let dList=[...state.studentsCache]; if(state.projectView==='ranking') dList.sort(sFn); else dList.sort((a,b)=>a.examId.localeCompare(b.examId,undefined,{numeric:true})); const filt=dList.filter(s=>!f||`${s.prefix}${s.name} ${s.surname}`.toLowerCase().includes(f)||s.examId.includes(f)); const tRows=filt.length; const tPages=Math.ceil(tRows/state.rowsPerPage); if(state.currentPage>tPages)state.currentPage=tPages||1; const st=state.showAll?0:(state.currentPage-1)*state.rowsPerPage; const disp=filt.slice(st,state.showAll?tRows:st+state.rowsPerPage); const hRow=document.querySelector('#table-header-row'); const rTit=state.projectView==='ranking'?'ลำดับที่':'ที่'; hRow.innerHTML=`<th class="px-6 py-4 w-20 text-center border-b border-slate-200 text-spt-primary font-bold">${rTit}</th><th class="px-6 py-4 border-b border-slate-200">เลขที่สอบ</th><th class="px-6 py-4 border-b border-slate-200">ชื่อ-สกุล</th>`; p.subjects.forEach(s=>hRow.innerHTML+=`<th class="px-4 py-4 text-center bg-slate-50/50 border-b border-slate-200"><div class="flex flex-col items-center"><span class="text-xs font-bold text-slate-700">${s.name}</span><span class="text-[10px] text-slate-400">เต็ม ${s.max}</span></div></th>`); hRow.innerHTML+=`<th class="px-6 py-4 text-center border-b border-slate-200">รวม</th><th class="px-6 py-4 text-center border-b border-slate-200">ลบ</th>`; const body=document.getElementById('table-body'); body.innerHTML=''; disp.forEach((s,i)=>{ const tr=document.createElement('tr'); tr.className="hover:bg-slate-50/80 transition-colors border-b border-slate-50"; const c1=state.projectView==='ranking'?`<span class="font-bold text-spt-primary">${s.rank}</span>`:`<span class="text-slate-400">${st+i+1}</span>`; let h=`<td class="px-6 py-4 text-center text-sm">${c1}</td><td class="px-6 py-4 font-mono font-bold text-slate-600">${s.examId}</td><td class="px-6 py-4 font-medium text-slate-700">${s.prefix}${s.name} ${s.surname}</td>`; p.subjects.forEach(sub=>{ const v=s.scores[sub.name]||0; const d=state.editMode?`<input type="text" value="${v}" class="score-input w-full text-center p-1.5 border border-spt-primary/30 rounded-lg focus:ring-2 focus:ring-spt-primary outline-none bg-white font-mono text-sm" data-student-id="${s.id}" data-subject="${sub.name}" onblur="updateScoreInline('${s.id}','${sub.name}',this.value)" onkeydown="handleEnter(event,this)" onpaste="handlePaste(event)">`:`<span class="font-mono text-slate-600">${v}</span>`; h+=`<td class="px-4 py-4 text-center border-l border-dashed border-slate-100">${d}</td>`; }); h+=`<td class="px-6 py-4 text-center font-bold text-spt-primary">${s.total}</td><td class="px-6 py-4 text-center"><button onclick="deleteStudent('${s.id}')" class="text-slate-300 hover:text-red-500"><i class="fas fa-trash-alt"></i></button></td>`; tr.innerHTML=h; body.appendChild(tr); }); document.getElementById('page-info').innerText=state.showAll?`All (${tRows})`:`${state.currentPage} / ${tPages}`; }
             // 5. Sort for Display (Exam ID)
             state.studentsCache.sort((a, b) => a.examId.localeCompare(b.examId, undefined, {numeric: true, sensitivity: 'base'}));
 
