--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
         .score-input:focus { outline: 2px solid #E91E63; z-index: 10; }
         ::-webkit-scrollbar { width: 6px; height: 6px; }
         ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
+        div:where(.swal2-container) div:where(.swal2-popup) {
+            border-radius: 20px !important;
+            font-family: 'Sarabun', sans-serif !important;
+        }
+        div:where(.swal2-icon).swal2-warning {
+            border-color: #E91E63 !important;
+            color: #E91E63 !important;
+        }
     </style>
 </head>
 <body class="text-slate-600 min-h-screen flex flex-col font-sans text-sm md:text-base selection:bg-spt-primary/20 selection:text-spt-dark">
