--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="flex items-center gap-3 cursor-pointer group" onclick="goHome()">
                     <div class="relative">
                         <div class="absolute inset-0 bg-spt-primary/10 rounded-full blur-md group-hover:bg-spt-primary/20 transition-all"></div>
-                        <img src="https://spt-curriculum.vercel.app/spt.png" class="h-10 w-auto relative z-10 transform group-hover:scale-105 transition-transform duration-300 drop-shadow-sm">
+                        <img src="Untitled design - 3.png" alt="Logo" class="h-10 w-auto relative z-10 transform group-hover:scale-105 transition-transform duration-300 drop-shadow-sm">
                     </div>
                     <div>
                         <div class="font-bold text-slate-800 text-lg leading-tight tracking-tight group-hover:text-spt-primary transition-colors">Satri Phatthalung</div>
@@ -108,7 +108,7 @@
                 <div class="w-20 h-20 border-4 border-slate-100 rounded-full"></div>
                 <div class="w-20 h-20 border-4 border-spt-primary border-t-transparent rounded-full animate-spin absolute top-0 left-0 shadow-lg shadow-spt-primary/30"></div>
                 <div class="absolute inset-0 flex items-center justify-center">
-                    <img src="https://spt-curriculum.vercel.app/spt.png" class="h-8 w-auto opacity-50">
+                    <img src="Untitled design - 3.png" class="h-8 w-auto opacity-50">
                 </div>
             </div>
             <p class="mt-4 text-spt-primary font-bold animate-pulse tracking-wide">กำลังดำเนินการ...</p>
