--- a/index.html
+++ b/index.html
@@ -615,7 +615,14 @@
             }
         });
 
-                document.getElementById('btn-logout').addEventListener('click',()=>{CustomSwal.fire({title:'ออกจากระบบ?',icon:'question',showCancelButton:true,confirmButtonText:'ยืนยัน',cancelButtonText:'ยกเลิก'}).then((r)=>{if(r.isConfirmed)signOut(auth)});});
+                document.getElementById('btn-logout').addEventListener('click',()=>{CustomSwal.fire({title:'ออกจากระบบ?',icon:'question',showCancelButton:true,confirmButtonText:'ยืนยัน',cancelButtonText:'ยกเลิก'}).then((r)=>{if(r.isConfirmed)if (auth.currentUser) {
+                // 1. กรณีแอดมิน: สั่ง Logout และไปหน้า Login
+                signOut(auth)
+            } else {
+                // 2. กรณีนักเรียน: สั่งรีเฟรชหน้าจอ เพื่อเคลียร์ค่าและกลับหน้าค้นหาทันที
+                window.location.reload(); 
+                // หรือใช้ window.router.navigate('/'); ถ้าไม่อยากรีโหลดทั้งหน้า
+            }});});
 
         // --- 3. STUDENT VIEW ---
         async function renderStudentProjectList(records) {
