--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="format-detection" content="telephone=no">
     <title>ระบบตรวจสอบคะแนนสอบเข้า - โรงเรียนสตรีพัทลุง</title>
+    <link rel="icon" type="image/png" href="https://score-teal.vercel.app/Untitled%20design%20-%203.png"> 
     
+    <link rel="shortcut icon" type="image/x-icon" href="https://score-teal.vercel.app/Untitled%20design%20-%203.png"> 
+
+    <link rel="apple-touch-icon" href="https://score-teal.vercel.app/Untitled%20design%20-%203.png">
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="https://score-teal.vercel.app/Untitled%20design%20-%203.png">
     <!-- Fonts & Icons -->
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
