--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 
                     <!-- Student Login -->
                     <form id="form-student" class="space-y-5">
+                        <img href="https://student.mytcas.com/assets/img/thai_id.svg">
                         <div class="relative group">
                             <i class="fas fa-id-card absolute left-4 top-1/2 -translate-y-1/2 text-slate-400 group-focus-within:text-spt-primary transition-colors"></i>
                             <input type="text" id="login-id" maxlength="13" placeholder="เลขบัตรประชาชน 13 หลัก" 
