--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
                     <!-- Student Login -->
                     <form id="form-student" class="space-y-5">
-                        <p class="text-center">
+                        <p class="text-center justify-center items-center">
                             <img src="https://student.mytcas.com/assets/img/thai_id.svg" width="213" height="122" alt="Thai ID Card">
                         </p>
                         <div class="relative group">
