--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 
                     <!-- Student Login -->
                     <form id="form-student" class="space-y-5">
-                        <p class="text-center justify-center items-center">
-                            <img src="https://student.mytcas.com/assets/img/thai_id.svg" width="213" height="122" alt="Thai ID Card">
-                        </p>
+                        <div class="text-center justify-center items-center">
+                            <img src="https://student.mytcas.com/assets/img/thai_id.svg" width="213" height="122" alt="Thai ID Card" class="flex justify-center items-center ">
+                        </div>
                         <div class="relative group">
                             <i class="fas fa-id-card absolute left-4 top-1/2 -translate-y-1/2 text-slate-400 group-focus-within:text-spt-primary transition-colors"></i>
                             <input type="text" id="login-id" maxlength="13" placeholder="เลขบัตรประชาชน 13 หลัก" 
