--- a/index.html
+++ b/index.html
@@ -143,9 +143,11 @@
 
                     <!-- Student Login -->
                     <form id="form-student" class="space-y-5">
-                        
-                        <div class="relative group">
+                        <div class="justify-center items-center">
                             <img src="https://student.mytcas.com/assets/img/thai_id.svg" alt="Thai ID Card" class="flex justify-center items-center ">
+                        </div>
+                        <div class="relative group">
+
                             <i class="fas fa-id-card absolute left-4 top-1/2 -translate-y-1/2 text-slate-400 group-focus-within:text-spt-primary transition-colors"></i>
                             <input type="text" id="login-id" maxlength="13" placeholder="เลขบัตรประชาชน 13 หลัก" 
                                 class="w-full pl-11 pr-4 py-4 bg-slate-50 border border-slate-200 rounded-2xl focus:outline-none focus:ring-2 focus:ring-spt-primary/20 focus:border-spt-primary transition-all text-center tracking-widest text-lg font-medium placeholder:tracking-normal" required>
