--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <!-- Student Login -->
                     <form id="form-student" class="space-y-5">
                         <div class="justify-center items-center">
-                            <img src="https://student.mytcas.com/assets/img/thai_id.svg" alt="Thai ID Card" class="flex justify-center items-center ">
+                            <img src="https://student.mytcas.com/assets/img/thai_id.svg" alt="Thai ID Card" class=" justify-center items-center ">
                         </div>
                         <div class="relative group">
 
