--- a/index.html
+++ b/index.html
@@ -239,8 +239,14 @@
                         <div class="h-8 w-px bg-slate-200 mx-1 hidden md:block"></div>
                         <button onclick="showProjectStats()" class="bg-purple-50 text-purple-600 border border-purple-100 px-3 py-2 rounded-xl text-xs font-bold hover:bg-purple-100 transition-all flex items-center gap-2 shadow-sm"><i class="fas fa-chart-pie"></i> <span class="hidden sm:inline">ดูสถิติ</span></button>
                         <button onclick="openModal('modal-add-student')" class="bg-spt-primary text-white px-4 py-2 rounded-xl text-xs font-bold shadow-lg shadow-spt-primary/20 hover:bg-spt-dark transition-all"><i class="fas fa-user-plus mr-1"></i> เพิ่ม นร.</button>
-                        <button onclick="document.getElementById('csv-score').click()" class="bg-white border border-slate-200 text-slate-600 hover:text-blue-600 px-4 py-2 rounded-xl text-xs font-bold transition-all flex items-center gap-2"><i class="fas fa-table text-blue-500"></i> Import คะแนน</button>
-                        <button onclick="exportCSV()" class="bg-slate-800 text-white px-4 py-2 rounded-xl text-xs font-bold hover:bg-slate-900 transition-all"><i class="fas fa-download mr-1"></i> Export</button>
+                       <button onclick="document.getElementById('csv-score').click()" class="bg-white border border-slate-200 text-slate-600 hover:text-blue-600 px-4 py-2 rounded-xl text-xs font-bold transition-all flex items-center gap-2"><i class="fas fa-table text-blue-500"></i> Import คะแนน</button>
+<button onclick="exportCSV()" class="bg-slate-800 text-white px-4 py-2 rounded-xl text-xs font-bold hover:bg-slate-900 transition-all"><i class="fas fa-download mr-1"></i> Export</button>
+
+<button onclick="printPDF()" class="bg-red-500 text-white px-4 py-2 rounded-xl text-xs font-bold hover:bg-red-600 transition-all flex items-center gap-2 shadow-sm">
+    <i class="fas fa-file-pdf"></i> พิมพ์ PDF
+</button>
+
+
                         <div class="relative group">
                             <button class="bg-white text-slate-400 border border-slate-200 px-3 py-2 rounded-xl hover:text-red-500 hover:border-red-200 transition-all"><i class="fas fa-ellipsis-v"></i></button>
                             <div class="absolute right-0 mt-2 w-56 bg-white rounded-xl shadow-xl border border-slate-100 hidden group-hover:block z-50 overflow-hidden dropdown-menu">
