--- a/index.html
+++ b/index.html
@@ -1474,7 +1474,7 @@ window.printPDF = async () => {
     if (reserveList.length > 0) {
         tableHtml += `<div style="page-break-before: always; height: 1px; width: 100%;"></div>`;
         tableHtml += `<table style="border-collapse: collapse; width: 100%; table-layout: auto; margin-top: 20px;">`;
-        tableHtml += buildHeader(true);
+        tableHtml += buildHeader(false);
         tableHtml += buildFooter('สำรอง');
         tableHtml += `<tbody>`;
         reserveList.forEach(s => {
