--- a/index.html
+++ b/index.html
@@ -1504,7 +1504,7 @@ window.printPDF = async () => {
         setTimeout(() => {
             printWin.focus();
             printWin.print(); 
-            //printWin.close();
+            printWin.close();
         }, 500); 
     };
 };
