--- a/index.html
+++ b/index.html
@@ -706,6 +706,14 @@ window.addEventListener('load', handleHashChange);
                             <div class="w-6 flex justify-center"><i class="fas fa-school text-slate-400"></i></div>
                             <span class="text-xs text-slate-500 truncate">${rec.oldSchool || '-'}</span>
                         </div>
+                        <div class="flex items-center gap-2">
+                            <div class="w-6 flex justify-center"><i class="fas fa-grade text-slate-400"></i></div>
+                            <span class="text-xs text-slate-500 truncate">ระดับชั้น${proj.gradeLevel || '-'}</span>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <div class="w-6 flex justify-center"><i class="fas fa-school text-slate-400"></i></div>
+                            <span class="text-xs text-slate-500 truncate">จำนวนที่รับ${proj.acceptedCount || '-'}</span>
+                        </div>
                     </div>
 
                     <div class="mt-4 flex items-center justify-end">
